--- a/src/MLBlazorRCL/Login/Login.razor
+++ b/src/MLBlazorRCL/Login/Login.razor
@@ -18,7 +18,7 @@
         <br>
         @if (!this.RendererInfo.IsInteractive)
         {
-            <ITVisions.Blazor.Controls.ProgressColorful></ITVisions.Blazor.Controls.ProgressColorful>
+            <ITVisions.Blazor.Controls.ProgressColorful OnTop="true"></ITVisions.Blazor.Controls.ProgressColorful>
         }
         <div class="row">
             <div class="col-xs-12 form-group">
