--- a/src/MLBlazorRCL/Login/Login.razor
+++ b/src/MLBlazorRCL/Login/Login.razor
@@ -22,7 +22,7 @@
         }
         <div class="row">
             <div class="col-xs-12 form-group">
-                <label for="name">E-Mail-Adresse:</label>
+                <label for="name">E-Mail-Adresse</label>
                 <input name="username" @bind="this.Username" id="username" type="text" placeholder="Ihre E-Mail-Adresse" required class="form-control" disabled="@(!this.RendererInfo.IsInteractive)">
             </div>
         </div>
