--- a/src/MiracleList_BS/Samples_BS/HelloWorldBeispiele/Vorlage.razor
+++ b/src/MiracleList_BS/Samples_BS/HelloWorldBeispiele/Vorlage.razor
@@ -14,7 +14,7 @@ Sum: @Sum
 
  void Test()
  {
-  string x = "Hallo";
+  // string Test = "Hallo";
  }
  // var string = """
  // Dies ist ein "Test" für einen Raw Literal String
