--- a/src/MiracleList_BU.Client/Components/About.razor
+++ b/src/MiracleList_BU.Client/Components/About.razor
@@ -35,7 +35,7 @@
 </div>
 
 @code {
- public string ServerUrl { get; set; }
+ public string ServerUrl { get; set; } = "";
  public string ServerAppVersion { get; set; } = "Server-Version: unknown";
  public string ServerFramework { get; set; } = "Server-Framework: unknown";
  /// <summary>
