--- a/src/MiracleList_Backend/Pages/ClientID2.razor
+++ b/src/MiracleList_Backend/Pages/ClientID2.razor
@@ -128,6 +128,6 @@
  </EditForm>
 
  <hr />
- Seite erstellt mit ASP.NET Core v@(typeof(Microsoft.AspNetCore.WebHost).Assembly.GetName().Version.ToString()) Razor Components (Blazor SSR)
+ Seite erstellt mit ASP.NET Core v@(typeof(Microsoft.AspNetCore.Builder.WebApplication).Assembly.GetName().Version.ToString()) Razor Components (Blazor SSR)
 
 </div>
