--- a/src/ITVisions.Blazor/Controls/Upload.razor
+++ b/src/ITVisions.Blazor/Controls/Upload.razor
@@ -300,7 +300,7 @@
   }
   catch (Exception ex)
   {
-   Util.Alert("Fehler beim Upload:\n" + ex.Message);
+   await Util.Alert("Fehler beim Upload:\n" + ex.Message);
   }
 
  }
