--- a/src/MiracleList_Backend/Pages/ClientID.cshtml
+++ b/src/MiracleList_Backend/Pages/ClientID.cshtml
@@ -111,7 +111,7 @@
  </form>
 
  <hr />
- Seite erstellt mit ASP.NET Core v@(typeof(Microsoft.AspNetCore.WebHost).Assembly.GetName().Version.ToString()) Razor Pages<br /> @Model.Aufrufe<text>.</text> Aufruf dieser Seite.
+ Seite erstellt mit ASP.NET Core v@(typeof(Microsoft.AspNetCore.Builder.WebApplication).Assembly.GetName().Version.ToString()) Razor Pages<br /> @Model.Aufrufe<text>.</text> Aufruf dieser Seite.
 
  @*<h3>Historie</h3>
   @{ int i = DateTime.Now.Year -5;}
