--- a/src/MLBlazorRCL/Login/Login.razor
+++ b/src/MLBlazorRCL/Login/Login.razor
@@ -30,7 +30,7 @@
 		<div class="row">
 			<div class="col-xs-12 form-group">
 				<label for="password">Kennwort</label>
-				<input name="password" id="password" @bind="this.Password" placeholder="Ihr Kennwort" required type="password" class="form-control" disabled="@(!this.RendererInfo.IsInteractive)">
+				<input name="password" id="password" @bind="this.Password" @bind:after="Login" placeholder="Ihr Kennwort" required type="password" class="form-control" disabled="@(!this.RendererInfo.IsInteractive)">
 			</div>
 		</div>
 
