Fix Warnings nach Umstellung auf BUnit 2.x

--- a/Test/BlazorTests/Test von Komponenten mit Parametern/CounterMitParameternTest_RazorStyle.razor
+++ b/Test/BlazorTests/Test von Komponenten mit Parametern/CounterMitParameternTest_RazorStyle.razor
@@ -1,4 +1,4 @@
-@inherits TestContext
+@inherits BunitContext
 These tests are written entirely in razor and C# syntax.
 
 Learn more at https://bunit.dev/docs/getting-started/writing-tests.html#creating-basic-tests-in-razor-files
