--- a/src/MLBlazorRCL/MainView/TaskEdit.razor
+++ b/src/MLBlazorRCL/MainView/TaskEdit.razor
@@ -1,4 +1,4 @@
-﻿@* @attribute [Authorize] TODO!!! *@
+﻿@* @attribute [Authorize] nicht notwendig, da diese Komponente nur als Subkomponente nutzbar ist*@
 @inject BlazorUtil Util
 
 @using BO
