--- a/src/MiracleList_BU/App.razor
+++ b/src/MiracleList_BU/App.razor
@@ -21,7 +21,7 @@
  <script src="@Assets[" /_content/ITVisions.Blazor/js/bootstrap.min.js"]" defer></script>
 
  <!-- Bundle aller CSS-Dateien, die Razor Components zugeordnet sind-->
- <link rel="stylesheet" href="@Assets["MiracleList_BS.styles.css"]" />
+ <link rel="stylesheet" href="@Assets["MiracleList_BU.styles.css"]" />
 
  <!-- Eigenständige CSS-Dateien und ICO-Dateien aus wwwRoot -->
  <link rel="icon" type="image/vnd.microsoft.icon" href="/_content/MLBlazorRCL/favicon.ico">
