--- a/src/MiracleList_BU/App.razor
+++ b/src/MiracleList_BU/App.razor
@@ -18,7 +18,10 @@
  <!--Bootstrap -->
  <link rel="stylesheet" href="@Assets["/_content/ITVisions.Blazor/css/bootstrap/bootstrap.min.css"]" />
  <script src="@Assets["/_content/ITVisions.Blazor/js/jquery.min.js"]"></script>
- <script src="@Assets[" /_content/ITVisions.Blazor/js/bootstrap.min.js"]" defer></script>
+ <script src="@Assets["/_content/ITVisions.Blazor/js/bootstrap.min.js"]" defer></script>
+
+ <!-- Font Awesome -->
+ <link href="@Assets["/_content/ITVisions.Blazor/css/fontawesome/css/all.min.css"]" rel="stylesheet" />
 
  <!-- Bundle aller CSS-Dateien, die Razor Components zugeordnet sind-->
  <link rel="stylesheet" href="@Assets["MiracleList_BU.styles.css"]" />
